# HAL

./: .gitignore  MainUI.py  README.html  README.md  build-gui  build-gui.py  callbacks.json  config  debug  debug.py  debug.sh  pyproject.toml  requirements_conda.pip  requirements_conda.txt  requirements_pip.txt  start  start.py  test.csv  test.ipynb
.github/workflows/: zblack.yml
HAL/classes/: dummy.py  settings.py
HAL/classes/data/: __init__.py  abstract.py  xenics.py
HAL/classes/display/: __init__.py  abstract.py  abstractImage.py  basicImageDisplay.py  focusOnFit2D.py  (+2 more)
HAL/default_modules/: __init__.py
HAL/gui/: GuessOptionsUI.py  MainUI.py  PlottingOptionsUI.py  ROI.py  __init__.py  advancedplot.py  cmap_test.py  commandpalette.py  correlations.py  dataexplorer.py  display.py  export.py  filebrowser.py  fitting.py  main.py  main.ui  menubar.py  misc.py  picoscope.py  quickplot.py  quotes.json  test_density_plot.ipynb  testing.py
HAL/loader/: __init__.py  modules.py  scripts.py
HAL/modules/: __init__.py
classes/: dummy.py  settings.py
classes/data/: __init__.py  abstract.py  xenics.py
classes/display/: __init__.py  abstract.py  abstractImage.py  basicImageDisplay.py  focusOnFit2D.py  imageOnlyDisplay.py
classes/fit/: __init__.py  abstract.py  gauss2D.py
classes/metadata/: __init__.py  abstract.py  file.py  gus.py  hal_fit.py  hev_fit.py
examples/: script_example.py
gui/: MainUI.py  dataexplorer.py  dataviz.py  display.py  filebrowser.py  fitting.py  main.py  main.ui  main_old.ui  menubar.py  metadata.py  misc.py  quickplot.py  testing.py
(+47 files in other folders)
